# llm-zoomcamp-2026-code

./: .env.example  .gitignore  LICENSE.md  README.md  pyproject.toml
classes/: agent.py  diagrams.md  embedder.py  faq.py  faq_searcher.py  faq_searcher_factory.py  in_memory_faq.py  in_memory_vector_faq.py  llm_prompter.py  local_faq.py  local_vector_faq.py  prompt_builder.py  rag_pipeline.py  raw_faq.py  searcher_config.py  sentence_embedder.py  thread.py  toolset.py
classes/module_1/: faq.py  faq_searcher.py  faq_searcher_factory.py  in_memory_faq.py  llm_instructions.py  llm_prompter.py  local_faq.py  minsearch.pyi  prompt_builder.py  rag_pipeline.py  raw_faq.py  thread.py
module_1/: L13_function_calling.py  L14_agentic_loop.py  L2_connect.py  L3_bad_rag.py  L3_context.py  L3_plain_llm.py  L4_read_faq.py  L5_minsearch.py  L6_build_prompt.py  L8_rag_minsearch.py  L9_rag_sqlitesearch.py  ingestion.py
module_1/classes/: agent.py  faq_searcher.py  faq_searcher_factory.py  in_memory_faq.py  llm_instructions.py  llm_prompter.py  local_faq.py  prompt_builder.py  rag_pipeline.py  searcher_config.py  thread.py
module_2/: L2_embeddings.py  L3_embeddings_dataset.py  L4_vector_search.py  L5_minsearch_vector.py  L6_ram_rag_vector.py  L7_localdb_rag_vector.py  ingestion.py
utils/: build_prompt.py  llm.py
